Markdown of pre-optimization results added

--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -2041,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f0853b8d",
+   "id": "c58d8b3d",
    "metadata": {},
    "outputs": [
     {
@@ -2075,15 +2075,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "382d184e",
+   "id": "539e8c43",
    "metadata": {},
    "source": [
-    "## Optimization of Gradient Boosting Model"
+    "## Results Before Optimization of Gradient Boosting Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "09e6fcc0",
+   "id": "32b199a8",
    "metadata": {},
    "source": [
     "* The first model was trained using the following parameter variables:\n",
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd32f389",
+   "id": "14ed2153",
    "metadata": {},
    "source": [
     "* According to the metrics calculated for the first model (see metrics in code above), the following was found:\n",
@@ -2110,16 +2110,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ffc0a8",
+   "id": "fac3ce58",
    "metadata": {},
    "source": [
     "* The goal for the optimization is to find better variables for the paramters described above to increase the sensitivity and predictive value for positive stroke cases. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d51789bc",
+   "metadata": {},
+   "source": [
+    "## Optimization of Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0758e980",
+   "id": "71f9162c",
    "metadata": {},
    "outputs": [],
    "source": []
