--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "882606f2",
+   "id": "c5a4a615",
    "metadata": {},
    "outputs": [
     {
@@ -4332,7 +4332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3e6277",
+   "id": "d821bc7d",
    "metadata": {},
    "source": [
     "## Results After Optimization of Gradient Boosting Model"
@@ -4340,7 +4340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23471d1",
+   "id": "7accd3db",
    "metadata": {},
    "source": [
     "* The optimized model was trained using the following hyperparameter variables:\n",
@@ -4355,16 +4355,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d3e67c",
+   "id": "ad7e1e49",
    "metadata": {},
    "source": [
     "* According to the metrics calculated for the optimized model (see metrics in code above), the following was found:\n",
     "    * An overall accuracy score was found to be about 94.4%. \n",
-    "    * The sensitivity for detecting if a patient did not have a stroke was 94%.\n",
-    "    * The sensitivity for detecting if a patient did  have a stroke was 97%.\n",
-    "    * The predictive value for when the model determined that a patient did not have a stroke was 100%.\n",
-    "    * The predictive value for when the model determined that a patient did have a stroke was 47%.\n",
+    "    * The sensitivity (recall) for detecting if a patient did not have a stroke was 94%.\n",
+    "    * The sensitivity (recall) for detecting if a patient did  have a stroke was 97%.\n",
+    "    * The predictive value (precision) for when the model determined that a patient did not have a stroke was 100%.\n",
+    "    * The predictive value (precision) for when the model determined that a patient did have a stroke was 47%.\n",
     "    * The top 5 most important features are age, average blood glucose levels, whether the patient is a stay-at-home parent, whether the patient lives in an urban area, and if the patient is married."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d8e601",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "### Positive takeaway:\n",
+    "#### The gradient boosting machine learning model reliably discerns from the testing data whether or not a patient has had a stroke, therefore the model can be used to determine if someone is at high risk of a stroke with high sensitivity. The overall accuracy is also reliable.\n",
+    "\n",
+    "### Negative takeaway:\n",
+    "#### Although this model shows to be highly sensitive, it has a lower precision (about 50%) for patients that have been determined to have a stroke. For this use case, it is more important to have a high sensitivity, so this model is still valuable. With a larger dataset, it is possible that the precision performance of the model can be improved. "
    ]
   }
  ],
