markdown updated and proof-read

--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -28,6 +28,8 @@
     "\n",
     "1) The preprocessed data is split into a training and testing dataset using scikit-learn's functionality.\n",
     "\n",
+    "2) A combination sampler will be applied to increase the amount of stroke cases so that the model can more accurately classify between non-stroke and stroke patients.\n",
+    "\n",
     "2) The data will be scaled to have a mean of 0 and standard deviation of 1 using sci-kit learn's functionality.\n",
     "\n",
     "3) An instance of scikit-learn's gradient boosting model will be created and trained with the training features and target."
@@ -38,15 +40,15 @@
    "id": "a19965d5",
    "metadata": {},
    "source": [
-    "## To improve the model's accuracy, the following steps can/will be taken:\n",
+    "## To improve the model's accuracy, the following steps will be taken:\n",
     "\n",
-    "* Oversampling the target vector using imbalanced-learn's RandomOverSampler since there are much more non-stroke patients in dataset than stroke patients or using imbalanced-learn's SMOTEENN combination sampler on input data.\n",
+    "* imbalanced-learn's SMOTEENN combination sampler will be used on input data since there are much more non-stroke patients in dataset than stroke patients.\n",
     "\n",
     "* Testing different learning rates for the gradient boosting model.\n",
     "\n",
     "* Testing different numbers of boosting stages (n_estimators).\n",
     "\n",
-    "* Altering other hyperparameters of the model.\n",
+    "* Altering other hyperparameters of the model using the GridSeachCV cross-validation optimizer.\n",
     "\n",
     "* Altering the dataset by binning features or removing features."
    ]
@@ -1149,7 +1151,7 @@
     "\n",
     "4) Columns that were of the \"float\" data type were converted into integers.\n",
     "\n",
-    "5) Rows with null values were removed.\n",
+    "5) Null values in the \"bmi\" column were replaced by the average bmi.\n",
     "\n",
     "6) A csv containing data prepared for machine learning model was exported to resources file."
    ]
@@ -1591,7 +1593,7 @@
    "source": [
     "## Description of preliminary feature engineering and preliminary feature selection, including the decision-making process:\n",
     "\n",
-    "* Any unnecessary features were removed so that the model was not inaccurately skewed. Categorical features were also converted to numerical data and spread out into binary columns using the Pandas get_dummies() function\n",
+    "* Any unnecessary features were removed (in this case the \"id\" column), so the model was not inaccurately skewed. Categorical features were also converted to numerical data and spread out into binary columns using the Pandas get_dummies() function\n",
     "\n",
     "### The decision-making process was conducted as follows:\n",
     "\n",
@@ -4375,7 +4377,7 @@
     "## Conclusion\n",
     "\n",
     "### Positive takeaway:\n",
-    "#### The gradient boosting machine learning model reliably discerns from the testing data whether or not a patient has had a stroke, therefore the model can be used to determine if someone is at high risk of a stroke with high sensitivity. The overall accuracy is also reliable.\n",
+    "#### The gradient boosting machine learning model reliably discerns from the testing data whether or not a patient has had a stroke, therefore the model can be used to determine if someone is at high risk of a stroke with high sensitivity. The overall accuracy is also reliable with a value of 94.4%. \n",
     "\n",
     "### Negative takeaway:\n",
     "#### Although this model shows to be highly sensitive, it has a lower precision (about 50%) for patients that have been determined to have a stroke. For this use case, it is more important to have a high sensitivity, so this model is still valuable. With a larger dataset, it is possible that the precision performance of the model can be improved. "
