--- a/Machine_Learning/gradient_boosting_model.ipynb
+++ b/Machine_Learning/gradient_boosting_model.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "2) A combination sampler will be applied to increase the amount of stroke cases so that the model can more accurately classify between non-stroke and stroke patients.\n",
     "\n",
-    "2) The data will be scaled to have a mean of 0 and standard deviation of 1 using sci-kit learn's functionality.\n",
+    "2) The data will be scaled to have a mean of 0 and standard deviation of 1 using sci-kit learn's functionality to ensure that input features are equally weighed.\n",
     "\n",
     "3) An instance of scikit-learn's gradient boosting model will be created and trained with the training features and target."
    ]
@@ -1731,7 +1731,7 @@
     "\n",
     "* imbalanced-learn's SMOTEENN combination sampler was used on input data since there was a discrepancy between the target categories i.e. patients that had a stroke made up only 4.3% of the dataset.\n",
     "\n",
-    "* Data was scaled using sklearn's StandardScaler to give features a normalized statistical distribution since the machine learning model would behave better when working with all normalized data."
+    "* Data was scaled using sklearn's StandardScaler to give features a normalized statistical distribution since the machine learning model would behave better when features are weighed equally."
    ]
   },
   {
